# rust-tutorial

./: .dockerignore  .env  .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/handlers/: auth_handler.rs
src/routes/: auth_route.rs
src/utils/: auth_middleware.rs  jwt.rs  mod.rs
test/api/: postman_collection.json
