#Cargo.toml
[package]
name = "rust-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
#Web framework
actix-web = { version = "4.12.1" }
serde = { version = "1.0.228", features = ["derive"] }

#Environment variables
dotenv = { version = "0.15.0" }

#Database ORM
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
chrono = { version = "0.4.42" }
#security
argon2 = { version = "0.5.3" }
rand_core = { version = "0.9.3", features = ["std"] }
