#Cargo.toml
[package]
name = "rust-actix-web-api"
version = "0.1.0"
edition = "2024"

[dependencies]
#Web framework
actix-web = { version = "4.12.1" }

#JSON serialization/deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }

#Environment variables
dotenv = { version = "0.15.0" }

#Database ORM
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
chrono = { version = "0.4.42" , features = ["serde"] }

#security
argon2 = { version = "0.5.3" }
rand_core = { version = "0.9.3", features = ["std"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
#actix-cors = { version = "0.7.1"}

#Logging and tracing
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-actix-web = { version = "0.7.19" }

#Data validation
validator = { version = "0.20.0" , features = ["derive"] }
futures = "0.3.31"

#Documentation
#utoipa = { version = "5.4.0" , features = ["actix_extras"] }
#utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

#Error handling
#thiserror = { version = "2.0.17" }
#anyhow = { version = "1.0.100" }

#uuid = { version = "1.19.0", features = ["v4", "serde"] }
#config = { version = "0.15.19"}